--- a/Examples/Podfile
+++ b/Examples/Podfile
@@ -3,4 +3,6 @@ source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '7.0'
 
+link_with 'TableView-Example', 'ScrollView-Example', 'CollectionView-Example'
+
 pod 'DZNSegmentedControl', :path => '../DZNSegmentedControl.podspec'
